2002-02-14  Duarte Loreto <happyguy_pt@hotmail.com>

        * pt.po: Added Portugues translation by Paulo Silva <paulojjs@yahoo.com>

2001-12-14  Simos Xenitellis  <simos@hellug.gr>

	* el.po: Updated Greek translation.

2001-12-09  Simos Xenitellis  <simos@hellug.gr>

	* el.po: Added Greek translation by 
	AARG! Anonymous <remailer@aarg.net>

2001-10-28  Christian Rose  <menthos@menthos.com>

	* da.po: Added Danish translation by
	Kenneth Christiansen <kenneth@gnu.org>.
	* sv.po: Updated Swedish translation.
	* .cvsignore: Added the messages file.

2001-10-08  Valek Filippov  <frob@df.ru>

	* ru.po: Updated russian translation.

2001-07-09  Christopher R. Gabriel  <cgabriel@cgabriel.org>

	* it.po: Added italian translation from Alessio Frusciante
	<algol@firenze.linux.it> 

2001-07-07  Dave Camp  <dave@ximian.com>

	* POTFILES.in: Updated.

	* POTFILES.skip: Added.

2001-02-28  Valek Filippov  <frob@df.ru>

	* ru.po: Added russian translation.

2000-12-19  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Added line.
	* update.pl, desk.pl, README.tools: Removed files obsoleted by
	xml-i18n-tools.
	* sv.po: Added Swedish translation.

2000-12-18  Valek Filippov  <frob@df.ru>
	
	Fixed ChangeLog, fixed name of module in update.pl.
        Added some scripts from  Kenneth Christiansen <kenneth@gnu.org>

        * desk.pl, update.pl: Two new scripts for helping
        translation/i18n maintainance of Gal
        
        * README.tools: Added readme file, which explains the
        use of the newly checked in po tools.      

	* da.po: Added Danish translation

        * POTFILES.in: Overall prepared for translations of gal
