@@ -1,4 +1,18 @@
-scintilla-control/scintilla-control.c
-scintilla-control/scintilla-ui.xml
-scintilla-control/Bonobo_Control_Scintilla.oaf.in
-scintilla-control/scintilla-find.c
+gdl/gdl-data-view.c
+gdl/gdl-dock-item-grip.c
+gdl/gdl-dock-item.c
+gdl/gdl-dock-layout.c
+gdl/gdl-dock-master.c
+gdl/gdl-dock-notebook.c
+gdl/gdl-dock-object.c
+gdl/gdl-dock-paned.c
+gdl/gdl-dock-placeholder.c
+gdl/gdl-dock-tablabel.c
+gdl/gdl-dock.c
+gdl/gdl-file-selector-util.c
+gdl/gdl-recent.c
+symbol-browser-control/GNOME_Development_SymbolBrowser.server.in
+symbol-browser-control/gnome-symbol-browser.xml
+symbol-browser-control/symbol-browser.c
+symbol-browser-control/test-symbol-browser-ui.xml
+symbol-browser-control/test-symbol-browser.c
